@@ -1,3 +1,7 @@
+2019-10-27  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-brxxx.el (brwget): new function.
+
 2019-10-16  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-blinks.el (find-esubstitutecommandkeys): new function.
